// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation renders 1`] = `
<nav
  class="sc-fzoLsD jdTPUr"
>
  <button
    class="sc-fzpans doEGPR sc-AxmLO louqpj"
    color=""
    data-button-test="true"
    type="button"
  >
    <span
      class="sc-fzplWN jHzZQp sc-AxjAm jWlVxK lni lni-close"
    />
  </button>
  Some children
</nav>
`;

exports[`Navigation should call default props onMenuToggle function when no onMenuToggle property is passed 1`] = `
<nav
  class="sc-fzoLsD jdTPUr"
>
  <button
    class="sc-fzpans doEGPR sc-AxmLO louqpj"
    color=""
    data-button-test="true"
    type="button"
  >
    <span
      class="sc-fzplWN jHzZQp sc-AxjAm jWlVxK lni lni-close"
    />
  </button>
  <ul
    class="sc-AxhUy ijoyzq"
  >
    <li
      class="sc-AxgMl fdAvPR"
    >
      <div
        class="sc-AxiKw iCNkRr"
        font-family="exo"
      >
        <a
          href="#home"
        >
          <div
            class="sc-AxheI dkiJtT"
          >
            <span
              class="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-home"
            />
            <span
              class="sc-Axmtr hZKuXu menu-text"
            >
              Home
            </span>
          </div>
        </a>
      </div>
    </li>
    <li
      class="sc-AxgMl fdAvPR"
    >
      <div
        class="sc-AxiKw iCNkRr"
        font-family="exo"
      >
        <a
          href="#users"
        >
          <div
            class="sc-AxheI dkiJtT"
          >
            <span
              class="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-users"
            />
            <span
              class="sc-Axmtr hZKuXu menu-text"
            >
              Users
            </span>
          </div>
        </a>
      </div>
    </li>
    <li
      class="sc-AxgMl fdAvPR"
    >
      <div
        class="sc-AxiKw iCNkRr"
        font-family="exo"
      >
        <a
          href="#devices"
        >
          <div
            class="sc-AxheI dkiJtT"
          >
            <span
              class="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-rocket"
            />
            <span
              class="sc-Axmtr hZKuXu menu-text"
            >
              Devices
            </span>
          </div>
        </a>
      </div>
    </li>
    <li
      class="sc-AxgMl fdAvPR"
    >
      <div
        class="sc-AxiKw iCNkRr"
        font-family="exo"
      >
        <a
          href="#costs"
        >
          <div
            class="sc-AxheI dkiJtT"
          >
            <span
              class="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-briefcase"
            />
            <span
              class="sc-Axmtr hZKuXu menu-text"
            >
              Costs
            </span>
          </div>
        </a>
      </div>
    </li>
  </ul>
</nav>
`;

exports[`Navigation should have menu toggle event listener 1`] = `
<nav
  class="sc-fzoLsD jdTPUr"
>
  <button
    class="sc-fzpans doEGPR sc-AxmLO louqpj"
    color=""
    data-button-test="true"
    type="button"
  >
    <span
      class="sc-fzplWN jHzZQp sc-AxjAm jWlVxK lni lni-close"
    />
  </button>
  <ul
    class="sc-AxhUy ijoyzq"
  >
    <li
      class="sc-AxgMl fdAvPR"
    >
      <div
        class="sc-AxiKw iCNkRr"
        font-family="exo"
      >
        <a
          href="#home"
        >
          <div
            class="sc-AxheI dkiJtT"
          >
            <span
              class="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-home"
            />
            <span
              class="sc-Axmtr hZKuXu menu-text"
            >
              Home
            </span>
          </div>
        </a>
      </div>
    </li>
    <li
      class="sc-AxgMl fdAvPR"
    >
      <div
        class="sc-AxiKw iCNkRr"
        font-family="exo"
      >
        <a
          href="#users"
        >
          <div
            class="sc-AxheI dkiJtT"
          >
            <span
              class="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-users"
            />
            <span
              class="sc-Axmtr hZKuXu menu-text"
            >
              Users
            </span>
          </div>
        </a>
      </div>
    </li>
    <li
      class="sc-AxgMl fdAvPR"
    >
      <div
        class="sc-AxiKw iCNkRr"
        font-family="exo"
      >
        <a
          href="#devices"
        >
          <div
            class="sc-AxheI dkiJtT"
          >
            <span
              class="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-rocket"
            />
            <span
              class="sc-Axmtr hZKuXu menu-text"
            >
              Devices
            </span>
          </div>
        </a>
      </div>
    </li>
    <li
      class="sc-AxgMl fdAvPR"
    >
      <div
        class="sc-AxiKw iCNkRr"
        font-family="exo"
      >
        <a
          href="#costs"
        >
          <div
            class="sc-AxheI dkiJtT"
          >
            <span
              class="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-briefcase"
            />
            <span
              class="sc-Axmtr hZKuXu menu-text"
            >
              Costs
            </span>
          </div>
        </a>
      </div>
    </li>
  </ul>
</nav>
`;

exports[`Navigation should render children menu 1`] = `
<nav
  class="sc-fzoLsD jdTPUr"
>
  <button
    class="sc-fzpans doEGPR sc-AxmLO louqpj"
    color=""
    data-button-test="true"
    type="button"
  >
    <span
      class="sc-fzplWN jHzZQp sc-AxjAm jWlVxK lni lni-close"
    />
  </button>
  <ul
    class="sc-AxhUy ijoyzq"
  >
    <li
      class="sc-AxgMl fdAvPR"
    >
      <div
        class="sc-AxiKw iCNkRr"
        font-family="exo"
      >
        <a
          href="#home"
        >
          <div
            class="sc-AxheI dkiJtT"
          >
            <span
              class="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-home"
            />
            <span
              class="sc-Axmtr hZKuXu menu-text"
            >
              Home
            </span>
          </div>
        </a>
      </div>
    </li>
    <li
      class="sc-AxgMl fdAvPR"
    >
      <div
        class="sc-AxiKw iCNkRr"
        font-family="exo"
      >
        <a
          href="#users"
        >
          <div
            class="sc-AxheI dkiJtT"
          >
            <span
              class="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-users"
            />
            <span
              class="sc-Axmtr hZKuXu menu-text"
            >
              Users
            </span>
          </div>
        </a>
      </div>
    </li>
    <li
      class="sc-AxgMl fdAvPR"
    >
      <div
        class="sc-AxiKw iCNkRr"
        font-family="exo"
      >
        <a
          href="#devices"
        >
          <div
            class="sc-AxheI dkiJtT"
          >
            <span
              class="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-rocket"
            />
            <span
              class="sc-Axmtr hZKuXu menu-text"
            >
              Devices
            </span>
          </div>
        </a>
      </div>
    </li>
    <li
      class="sc-AxgMl fdAvPR"
    >
      <div
        class="sc-AxiKw iCNkRr"
        font-family="exo"
      >
        <a
          href="#costs"
        >
          <div
            class="sc-AxheI dkiJtT"
          >
            <span
              class="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-briefcase"
            />
            <span
              class="sc-Axmtr hZKuXu menu-text"
            >
              Costs
            </span>
          </div>
        </a>
      </div>
    </li>
  </ul>
</nav>
`;

exports[`Navigation should render children menu closed when given appropriate property 1`] = `
<nav
  class="sc-fzoLsD jdTPUr"
>
  <button
    class="sc-fzpans doEGPR sc-AxmLO louqpj"
    color=""
    data-button-test="true"
    type="button"
  >
    <span
      class="sc-fzplWN jHzZQp sc-AxjAm jWlVxK lni lni-menu"
    />
  </button>
  <ul
    class="sc-AxhUy ijoyzq"
  >
    <li
      class="sc-AxgMl fdAvPR"
    >
      <div
        class="sc-AxiKw iCNkRr"
        font-family="exo"
      >
        <a
          href="#home"
        >
          <div
            class="sc-AxheI dkiJtT"
          >
            <span
              class="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-home"
            />
            <span
              class="sc-Axmtr hZKuXu menu-text"
            >
              Home
            </span>
          </div>
        </a>
      </div>
    </li>
    <li
      class="sc-AxgMl fdAvPR"
    >
      <div
        class="sc-AxiKw iCNkRr"
        font-family="exo"
      >
        <a
          href="#users"
        >
          <div
            class="sc-AxheI dkiJtT"
          >
            <span
              class="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-users"
            />
            <span
              class="sc-Axmtr hZKuXu menu-text"
            >
              Users
            </span>
          </div>
        </a>
      </div>
    </li>
    <li
      class="sc-AxgMl fdAvPR"
    >
      <div
        class="sc-AxiKw iCNkRr"
        font-family="exo"
      >
        <a
          href="#devices"
        >
          <div
            class="sc-AxheI dkiJtT"
          >
            <span
              class="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-rocket"
            />
            <span
              class="sc-Axmtr hZKuXu menu-text"
            >
              Devices
            </span>
          </div>
        </a>
      </div>
    </li>
    <li
      class="sc-AxgMl fdAvPR"
    >
      <div
        class="sc-AxiKw iCNkRr"
        font-family="exo"
      >
        <a
          href="#costs"
        >
          <div
            class="sc-AxheI dkiJtT"
          >
            <span
              class="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-briefcase"
            />
            <span
              class="sc-Axmtr hZKuXu menu-text"
            >
              Costs
            </span>
          </div>
        </a>
      </div>
    </li>
  </ul>
</nav>
`;
